@@ -19,6 +19,7 @@ diag          = +Alien::CMake
 diag          = +HTTP::Tiny
 diag          = +Archive::Ar
 diag          = +Archive::Ar::Libarchive
+diag          = +Net::FTP
 readme_from   = lib/Alien/Install.pm
 
 [RemovePrereqs]
@@ -49,6 +50,7 @@ remove = FFI::Raw
 remove = PkgConfig
 remove = Archive::Zip
 remove = Archive::Ar
+remove = Net::FTP
 
 ; comes with Role::Tiny
 remove = Role::Tiny::With
