@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 9;
+use Test::More tests => 10;
 
 use_ok 'Alien::Install';
 use_ok 'Alien::Install::Util';
@@ -8,6 +8,7 @@ use_ok 'Alien::Install::Role::Installer';
 use_ok 'Alien::Install::Role::Tar';
 use_ok 'Alien::Install::Role::CMake';
 use_ok 'Alien::Install::Role::HTTP';
+use_ok 'Alien::Install::Role::FTP';
 use_ok 'Alien::Install::Role::Autoconf';
 use_ok 'Alien::Install::Role::TestCompileRun';
 use_ok 'Alien::Install::Role::TestFFI';
